--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 server.port=3000
+
+spring.mvc.view.prefix=classpath:/templates/
+spring.mvc.view.suffix=.html
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template-location=true
+
+spring.servlet.multipart.location= /home/ec2-user/app/hdfinal
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
